src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>LegalZoom Standard Support Process</fullName>
        <description>Standard support process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>LZ Working on Case</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Researching</fullName>
        </values>
        <values>
            <fullName>Updated by Customer</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>LegalZoom UAT Support Process</fullName>
        <description>UAT support process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Ready for Retest</fullName>
        </values>
        <values>
            <fullName>Researching</fullName>
        </values>
        <values>
            <fullName>Updated by Customer</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Legalzoom - Production</fullName>
        <description>Legalzoom - Production</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Researching</fullName>
        </values>
        <values>
            <fullName>Revision Complete</fullName>
        </values>
        <values>
            <fullName>Revision Required</fullName>
        </values>
        <values>
            <fullName>Updated by Customer</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AM_Call_Log__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AM Call Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Assigned__c</fullName>
        <formula>Account.Biz_Starter_BAM__c</formula>
        <label>Account Manager Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Call_Back_Response_Time_Hours__c</fullName>
        <formula>(Date_Time_Manager_Call_Back_Complete__c - Date_Time_Assigned_Manager_Call_Back__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Call-Back Response Time (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_Stage__c</fullName>
        <label>App Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>Sig Received</fullName>
                </value>
                <value>
                    <fullName>USPTO Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_User_Department2__c</fullName>
        <description>Department of Assigned User</description>
        <formula>Assigned_User__r.Department2__c</formula>
        <label>Assigned User Department2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_User_Department__c</fullName>
        <formula>Assigned_User__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned User Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_User_Division2__c</fullName>
        <formula>Assigned_User__r.Division2__c</formula>
        <label>Assigned User Division2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_User_Division__c</fullName>
        <formula>Assigned_User__r.Division</formula>
        <label>Assigned User Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_User_Login_ID__c</fullName>
        <description>User&apos;s customs login id field. for reporting purposes.</description>
        <formula>Assigned_User__r.Login_ID_del__c</formula>
        <label>Assigned User Login ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_User_Owner_ID__c</fullName>
        <description>Assigned User - Owner ID</description>
        <formula>Assigned_User__r.Id</formula>
        <label>Assigned User Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_User_Title2__c</fullName>
        <formula>Assigned_User__r.Title2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned User Title2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_User_Title__c</fullName>
        <formula>Assigned_User__r.Title</formula>
        <label>Assigned User Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assigned User</description>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Automatic_Problem_Order__c</fullName>
        <formula>IF(Problem_Order_Type__c = &quot;Automatic Problem Order&quot;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Automatic Problem Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Biz_HA_Pre_Filing_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Biz HA Pre-Filing Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Biz_HA_Pre_Filing_Completed_By__c</fullName>
        <label>Biz HA Pre-Filing Completed By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biz_HA_Pre_Filing_Completed_Date__c</fullName>
        <label>Biz HA Pre-Filing Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Biz_QC_Processor__c</fullName>
        <label>Biz QC Processor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_AM_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC AM Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Biz_Assigned__c</fullName>
        <formula>if(OR(OwnerId=&quot;005G0000001qtkl&quot;,OwnerId=&quot;005G0000001qt2U&quot;,OwnerId=&quot;005G0000001quqz&quot;,OwnerId=&quot;005G0000001qt2o&quot;,OwnerId=&quot;005G0000001qt2y&quot;, OwnerId =&quot;005G0000001qtuH&quot;, OwnerId = &quot;005G0000001qt2t&quot;, OwnerId = &quot;005G0000001qtfR&quot;, OwnerId = &quot;005G0000001qtfb&quot;, OwnerId = &quot;005G0000001qtlF&quot;, OwnerId = &quot;005G0000001qt33&quot;, OwnerId = &quot;005G0000001qtl0&quot;, OwnerId = &quot;005G0000001qt2P&quot;, OwnerId = &quot;005G0000001qtlA&quot;, OwnerId = &quot;005G0000001qtuC&quot;,OwnerId = &quot;005G0000001qt2Z&quot;, OwnerId = &quot;005G0000001qtkq&quot;, OwnerId = &quot; 005G0000001qtkv&quot;, OwnerId = &quot;005G0000001qtuv&quot;, OwnerId = &quot; 005G0000001qtl5&quot;, OwnerId = &quot;005G0000001qcwZ&quot;, OwnerId=&quot;005G0000001qpNT&quot;, OwnerId=&quot;005G0000001qjLv&quot;, OwnerId=&quot;005G0000001qcy1&quot;, OwnerId=&quot;005G0000001qd9J&quot;, OwnerId=&quot;005G0000001qpNO&quot;, OwnerId=&quot;005G0000001qrOJ&quot;, OwnerId=&quot;005G0000001qgaY&quot;, OwnerId=&quot;005G0000001qd11&quot;, OwnerId=&quot;005G0000001qgg2&quot;, OwnerId=&quot;005G0000001qigY&quot;, OwnerId=&quot;005G0000001qggC&quot;, OwnerId=&quot;005G0000001qknb&quot;, OwnerId=&quot;005G0000001qknC&quot;, OwnerId=&quot;005G0000001qknW&quot;, OwnerId=&quot;005G0000001qgaT&quot;, OwnerId=&quot;005G0000001qih2&quot;, OwnerId=&quot;005G0000001qlC2&quot;),&quot;yes&quot;,&quot;no&quot;)</formula>
        <label>CC Biz Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Email_Queue__c</fullName>
        <label>CC Email Queue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CC Biz Email</fullName>
                </value>
                <value>
                    <fullName>CC IP Email</fullName>
                </value>
                <value>
                    <fullName>CC PS Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Back_Overdue__c</fullName>
        <formula>IF(ISBLANK( Overdue_Call_Back__c), False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call-Back Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Back_SLA_Met__c</fullName>
        <formula>IF( Date_Time_Manager_Call_Back_Complete__c &lt;Date_Time_Call_Back_Target__c, TRUE, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call-Back SLA Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Log_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Log_Contact_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Selected</fullName>
                    <default>true</default>
                    <label>Not Selected</label>
                </value>
                <value>
                    <fullName>No-VM</fullName>
                </value>
                <value>
                    <fullName>No-NM</fullName>
                </value>
                <value>
                    <fullName>No-Email</fullName>
                </value>
                <value>
                    <fullName>No-Final</fullName>
                </value>
                <value>
                    <fullName>Yes-SNE</fullName>
                </value>
                <value>
                    <fullName>Yes-Talk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caller_Type__c</fullName>
        <label>Caller Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Contact</fullName>
                    <default>true</default>
                    <label>Primary Contact</label>
                </value>
                <value>
                    <fullName>Authorized Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caller_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Caller Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Order_Count__c</fullName>
        <formula>Order__r.Order_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Order Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Passes__c</fullName>
        <description>Custom field developed by Cloud Trigger to assist with FCR. Counts number of times case owner has been changed.</description>
        <label># Case Passes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Sub_Reason__c</fullName>
        <description>This is the Case reason used in the web to case form. this is linked to case reason.</description>
        <label>Secondary Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>About LegalZoom</fullName>
                </value>
                <value>
                    <fullName>Additional Services</fullName>
                </value>
                <value>
                    <fullName>Become an Affiliate</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Change to Order</fullName>
                </value>
                <value>
                    <fullName>Contact Information</fullName>
                </value>
                <value>
                    <fullName>Discount Question</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>I am not able to submit my order</fullName>
                </value>
                <value>
                    <fullName>I can&apos;t view help text</fullName>
                </value>
                <value>
                    <fullName>I did not get my discount</fullName>
                </value>
                <value>
                    <fullName>LegalZoom Employment Opportunity</fullName>
                </value>
                <value>
                    <fullName>Liaison Inquiry</fullName>
                </value>
                <value>
                    <fullName>Log in/Password Assistance</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Ordering &amp; Fulfillment Question</fullName>
                </value>
                <value>
                    <fullName>Order Status</fullName>
                </value>
                <value>
                    <fullName>Package description / Pricing</fullName>
                </value>
                <value>
                    <fullName>Payment/Billing Question</fullName>
                </value>
                <value>
                    <fullName>Privacy/Security</fullName>
                </value>
                <value>
                    <fullName>Problem with my Order</fullName>
                </value>
                <value>
                    <fullName>Registered Agents</fullName>
                </value>
                <value>
                    <fullName>Request to Expedite</fullName>
                </value>
                <value>
                    <fullName>Satisfaction Guarantee</fullName>
                </value>
                <value>
                    <fullName>Submit my materials</fullName>
                </value>
                <value>
                    <fullName>Terms of Service</fullName>
                </value>
                <value>
                    <fullName>Trouble Printing</fullName>
                </value>
                <value>
                    <fullName>Update Contact Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Thread_Id__c</fullName>
        <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Thread Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>WEB TO CASE-Top level &quot;Category&quot; list DUP of case Reason NOT USED</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Information</fullName>
                </value>
                <value>
                    <fullName>Questions About my Order</fullName>
                </value>
                <value>
                    <fullName>Placing an Order</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
                <value>
                    <fullName>Submit my Materials</fullName>
                </value>
                <value>
                    <fullName>Registered Agents</fullName>
                </value>
                <value>
                    <fullName>Privacy&amp; Security</fullName>
                </value>
                <value>
                    <fullName>Satisfaction Guarantee</fullName>
                </value>
                <value>
                    <fullName>Terms of Service</fullName>
                </value>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_When_Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed When Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Touch_Point__c</fullName>
        <label>Contact Touch Point</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Post Consult -Legal</fullName>
                </value>
                <value>
                    <fullName>Post Consult - Tax</fullName>
                </value>
                <value>
                    <fullName>Pre-Filing Problem</fullName>
                </value>
                <value>
                    <fullName>Post-Filing Problem</fullName>
                </value>
                <value>
                    <fullName>Customer Called Back</fullName>
                </value>
                <value>
                    <fullName>Initial Contact</fullName>
                </value>
                <value>
                    <fullName>Awaiting Signature</fullName>
                </value>
                <value>
                    <fullName>Docs Rec’d</fullName>
                </value>
                <value>
                    <fullName>Packet Review</fullName>
                </value>
                <value>
                    <fullName>Annual Filings</fullName>
                </value>
                <value>
                    <fullName>G&amp;S Consult</fullName>
                </value>
                <value>
                    <fullName>TM Search Results</fullName>
                </value>
                <value>
                    <fullName>TM App Prep</fullName>
                </value>
                <value>
                    <fullName>TM App Filed</fullName>
                </value>
                <value>
                    <fullName>TM App Published</fullName>
                </value>
                <value>
                    <fullName>TM Intent to Use 8 Month</fullName>
                </value>
                <value>
                    <fullName>TM Use Commerce 8 Month</fullName>
                </value>
                <value>
                    <fullName>TM Notice of Allowance Issued</fullName>
                </value>
                <value>
                    <fullName>TM Office Action</fullName>
                </value>
                <value>
                    <fullName>TM 1 Month</fullName>
                </value>
                <value>
                    <fullName>TM 2 Month</fullName>
                </value>
                <value>
                    <fullName>TM 3 Month</fullName>
                </value>
                <value>
                    <fullName>TM 4 Month</fullName>
                </value>
                <value>
                    <fullName>TM 5 Month</fullName>
                </value>
                <value>
                    <fullName>TM 6 Month</fullName>
                </value>
                <value>
                    <fullName>TM 7 Month</fullName>
                </value>
                <value>
                    <fullName>TM 8 Month</fullName>
                </value>
                <value>
                    <fullName>TM 9 Month</fullName>
                </value>
                <value>
                    <fullName>TM 10 Month</fullName>
                </value>
                <value>
                    <fullName>TM 11 Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_Case_Wizard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if the case was created using case wizard. Checked means the case was created using Case Wizard.</description>
        <label>Created By Case Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By_User_Department2__c</fullName>
        <formula>CreatedBy.Department2__c</formula>
        <label>Created By User Department2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_User_Department__c</fullName>
        <formula>CreatedBy.Department</formula>
        <label>Created By User Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_User_Division2__c</fullName>
        <formula>CreatedBy.Division2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By User Division2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_User_Division__c</fullName>
        <formula>CreatedBy.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By User Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_User_TItle__c</fullName>
        <formula>CreatedBy.Title</formula>
        <label>Created By User TItle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_User_Title2__c</fullName>
        <formula>CreatedBy.Title2__c</formula>
        <label>Created By User Title2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <description>Customer Id of the Account</description>
        <formula>Account.Customer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Login__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Login</label>
        <referenceTo>Customer_Login__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateTime_Problem_Identified__c</fullName>
        <label>Date/Time Problem Identified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_First_Phone_Call__c</fullName>
        <description>Date/Time the first phone call was logged for the case</description>
        <label>Date First Phone Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Initial_Solution_Response__c</fullName>
        <label>Date Initial Solution Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Assigned_Manager_Call_Back__c</fullName>
        <label>Date/Time Assigned Manager Call-Back</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Call_Back_Target__c</fullName>
        <formula>CASE( 
MOD(DATEVALUE( Date_Time_Assigned_Manager_Call_Back__c ) - DATE(1900, 1, 7), 7), 
0, Date_Time_Assigned_Manager_Call_Back__c +2, 
1, Date_Time_Assigned_Manager_Call_Back__c +1, 
2, Date_Time_Assigned_Manager_Call_Back__c +1, 
3, Date_Time_Assigned_Manager_Call_Back__c +1, 
4, Date_Time_Assigned_Manager_Call_Back__c +1, 
5, Date_Time_Assigned_Manager_Call_Back__c +3, 
6, Date_Time_Assigned_Manager_Call_Back__c +3, Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call-Back Target</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Customer_Contacted__c</fullName>
        <label>Date/Time Customer Contacted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Last_Queue_Assigned__c</fullName>
        <label>Date/Time Last Queue Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Manager_Call_Back_Complete__c</fullName>
        <label>Date/Time Manager Call-Back Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Resolved__c</fullName>
        <label>Date/Time Resolved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Revision_Complete__c</fullName>
        <label>Date/Time Revision Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Sent_for_Revision__c</fullName>
        <label>Date/Time Sent for Revision</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Day_Created__c</fullName>
        <formula>CASE(
MOD(DATEVALUE( CreatedDate ) - DATE(1900, 1, 7), 7),
0, &quot;Sunday&quot;,
1, &quot;Monday&quot;,
2, &quot;Tuesday&quot;,
3, &quot;Wednesday&quot;,
4, &quot;Thursday&quot;,
5, &quot;Friday&quot;,
6, &quot;Saturday&quot;, &quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of the Week Created</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Call_to_Contact__c</fullName>
        <formula>Date_Time_Customer_Contacted__c - CreatedDate</formula>
        <label>Days Call to Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Created_to_Resolved__c</fullName>
        <formula>Date_Time_Resolved__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Created to Resolved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_First_Call_To_Closed__c</fullName>
        <formula>DATEVALUE(ClosedDate) - Date_First_Phone_Call__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since First Call To Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Problem_Identification__c</fullName>
        <formula>NOW() - DateTime_Problem_Identified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Problem Identification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debug_Info__c</fullName>
        <label>Debug Info</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Review_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>when checked, sending an email will switch the owner to the previous owner.</description>
        <label>Send for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite_Services__c</fullName>
        <formula>IF(Order__r.Expedite_Services__c &gt; 0, Image(&quot;/servlet/servlet.FileDownload?file=015G000000wEJeB&quot;,&quot;image from Documents tab&quot;), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expedite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Call_or_Email__c</fullName>
        <description>For  File Net Enhanced Alert Report</description>
        <formula>IF( CONTAINS(RIGHT(Subject, LEN(Subject) - FIND(&quot;:&quot;, Subject, FIND(&quot;:&quot;, Subject, FIND(&quot;:&quot;, Subject, FIND(&quot;:&quot;, Subject)+1)+1)+1) ), &quot;AutoDialer&quot;), &quot;Call&quot;, IF(CONTAINS(RIGHT(Subject, LEN(Subject) - FIND(&quot;:&quot;, Subject, FIND(&quot;:&quot;, Subject, FIND(&quot;:&quot;, Subject, FIND(&quot;:&quot;, Subject)+1)+1)+1) ), &quot;Email&quot;), &quot;Email&quot;, &quot;&quot;))</formula>
        <label>Filter Call or Email?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Product_Detail__c</fullName>
        <formula>MID(Subject, FIND(&quot;:&quot;, Subject, FIND(&quot;:&quot;, Subject)+1)+1, FIND(&quot;:&quot;, Subject, FIND(&quot;:&quot;, Subject, FIND(&quot;:&quot;, Subject)+1)+1) - FIND(&quot;:&quot;, Subject, FIND(&quot;:&quot;, Subject)+1)-1 )</formula>
        <label>Filter Product Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_State_Product__c</fullName>
        <description>For FileNet: Enhanced Alert Report</description>
        <formula>LEFT(Subject, FIND(&quot;:&quot;, Subject, FIND(&quot;:&quot;, Subject)+1)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filter State&amp;Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Value__c</fullName>
        <label>Flag Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <formula>IMAGE(  
CASE( Priority,  
&quot;Low&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Medium&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;High&quot;, &quot;/img/samples/flag_red.gif&quot;,  
&quot;/s.gif&quot;),  
&quot;priority flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasAttachment__c</fullName>
        <formula>IF(IsHasAttachment__c == TRUE, IMAGE(&quot;/resource/EmailPicture/EmailPicture/emailHasAttach.gif&quot;, &quot;no image&quot;, 16, 16), NULL)</formula>
        <label>HasAttachment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hot_Issues__c</fullName>
        <description>deferred to phase 2</description>
        <label>Hot Issues</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer has correct info but is not the claimed person</fullName>
                </value>
                <value>
                    <fullName>Caller does not have CC info</fullName>
                </value>
                <value>
                    <fullName>Not aware of taxes related to filing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_Since_Creation__c</fullName>
        <formula>FLOOR((NOW() -   CreatedDate)*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Since Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IP Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Response_Due__c</fullName>
        <label>Initial Response Due</label>
        <type>DateTime</type>
    </fields>
</CustomObject>